<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.donation.DonationActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView_info"
        style="@style/FreeForm.CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_view_margin"
        android:layout_marginTop="@dimen/card_view_margin"
        android:layout_marginEnd="@dimen/card_view_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/senior_info"
                android:textColor="@color/color_text"
                android:padding="@dimen/card_view_child_padding"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView_app"
        style="@style/FreeForm.CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView_info"
        android:layout_marginStart="@dimen/card_view_margin"
        android:layout_marginTop="@dimen/card_view_margin"
        android:layout_marginEnd="@dimen/card_view_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_alipay"
                style="@style/FreeForm.ButtonStyle"
                android:text="@string/alipay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:padding="@dimen/card_view_child_padding"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pay_list"
                style="@style/FreeForm.ButtonStyle"
                android:text="@string/pay_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:padding="@dimen/card_view_child_padding"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_so_sad"
                style="@style/FreeForm.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/so_sad"
                android:padding="@dimen/card_view_child_padding"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_permission"
                style="@style/FreeForm.ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/wechat"
                android:padding="@dimen/card_view_child_padding"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView_wechat"
        style="@style/FreeForm.CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_view_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/card_view_margin"
        android:background="@mipmap/wechat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView_app">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/wechat" />
            </LinearLayout>
        </ScrollView>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>